[gd_scene load_steps=35 format=2]

[ext_resource path="res://game/scenarios/YoungScenario.gd" type="Script" id=1]
[ext_resource path="res://assets/textures/maps/MapTestBase.png" type="Texture" id=2]
[ext_resource path="res://assets/textures/maps/MapTestTop.png" type="Texture" id=3]
[ext_resource path="res://game/interactuables/InteractuableElement.tscn" type="PackedScene" id=4]
[ext_resource path="res://game/Light.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/textures/gameplay/objects/Model/modelFront.png" type="Texture" id=6]
[ext_resource path="res://game/ClosetHide.tscn" type="PackedScene" id=7]
[ext_resource path="res://game/ProximityAudio.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/textures/gameplay/objects/Model/modelNumber.png" type="Texture" id=9]
[ext_resource path="res://assets/textures/gameplay/objects/BaseBallBat/bat.png" type="Texture" id=11]
[ext_resource path="res://assets/textures/gameplay/objects/BaseBallBat/batZoom.png" type="Texture" id=12]
[ext_resource path="res://assets/sounds/music/Joven.mp3" type="AudioStream" id=13]

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 62.5, 9.5 )

[sub_resource type="OccluderPolygon2D" id=21]
polygon = PoolVector2Array( 77, 10, -47, 10, -47, -8, 77, -9 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 13, 420 )

[sub_resource type="OccluderPolygon2D" id=7]
polygon = PoolVector2Array( 16, -368, 16, 472, -8, 472, -8, -368 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 612, 12 )

[sub_resource type="OccluderPolygon2D" id=9]
polygon = PoolVector2Array( 600, 8, -624, 8, -624, -16, 600, -16 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 612, 12 )

[sub_resource type="OccluderPolygon2D" id=11]
polygon = PoolVector2Array( 600, 8, -624, 8, -624, -16, 600, -16 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 8, 192 )

[sub_resource type="OccluderPolygon2D" id=13]
polygon = PoolVector2Array( 8, 136, -8, 136, -8, -240, 8, -240 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 8, 56 )

[sub_resource type="OccluderPolygon2D" id=15]
polygon = PoolVector2Array( 8, 88, -8, 88, -8, -40, 8, -40 )

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 8.5, 135.5 )

[sub_resource type="OccluderPolygon2D" id=17]
polygon = PoolVector2Array( 12, 138, -5, 138, -5, -133, 12, -133 )

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 191, 9.5 )

[sub_resource type="OccluderPolygon2D" id=19]
polygon = PoolVector2Array( 192, 10, -190, 10, -190, -9, 192, -9 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 40, 9.5 )

[sub_resource type="OccluderPolygon2D" id=23]
polygon = PoolVector2Array( 41, 10, -40, 10, -40, -9, 41, -9 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=25]
extents = Vector2( 32, 32 )

[sub_resource type="NavigationPolygon" id=4]
vertices = PoolVector2Array( 392, 256, 848, 256, 848, 368, 392, 864, 896, 368, 896, 424, 864, 584, 712, 816, 1384, 424, 1384, 872, 1304, 872, 1304, 832, 1136, 832, 1136, 584, 864, 816, 712, 864 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 3, 2, 4, 5, 6, 7 ), PoolIntArray( 8, 9, 10, 11 ), PoolIntArray( 11, 12, 13, 8 ), PoolIntArray( 5, 8, 13, 6 ), PoolIntArray( 6, 14, 7 ), PoolIntArray( 3, 7, 15 ) ]
outlines = [ PoolVector2Array( 392, 256, 392, 864, 712, 864, 712, 816, 864, 816, 864, 584, 1136, 584, 1136, 832, 1304, 832, 1304, 872, 1384, 872, 1384, 424, 896, 424, 896, 368, 848, 368, 848, 256 ) ]

[sub_resource type="NavigationPolygon" id=24]
vertices = PoolVector2Array( 1376, 272, 1376, 360, 1320, 360, 1008, 272, 1320, 424, 1264, 424, 1264, 360, 1008, 360 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 2, 4, 5, 6 ), PoolIntArray( 3, 2, 6 ), PoolIntArray( 3, 6, 7 ) ]
outlines = [ PoolVector2Array( 1376, 272, 1008, 272, 1008, 360, 1264, 360, 1264, 424, 1320, 424, 1320, 360, 1376, 360 ) ]

[node name="YoungScenario" type="Node2D" groups=["progress_listeners"]]
script = ExtResource( 1 )
camera_path = NodePath("Camera2D")
nav_base_path = NodePath("Navigation2D")
bgm = ExtResource( 13 )
closet_door_key = "unlocked_closet"

[node name="Map" type="Sprite" parent="."]
position = Vector2( 960, 540 )
z_as_relative = false
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="MapTop" type="Sprite" parent="."]
position = Vector2( 960, 540 )
z_index = 3
z_as_relative = false
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Walls" type="Node2D" parent="."]
z_index = 1
z_as_relative = false

[node name="Wall8" type="StaticBody2D" parent="Walls"]
position = Vector2( 1495, 376 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall8"]
position = Vector2( 15.5, 0.5 )
shape = SubResource( 20 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Walls/Wall8"]
light_mask = 3
occluder = SubResource( 21 )
light_mask = 3

[node name="Wall" type="StaticBody2D" parent="Walls"]
position = Vector2( 355, 488 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall"]
position = Vector2( 3, 52 )
shape = SubResource( 6 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Walls/Wall"]
light_mask = 3
occluder = SubResource( 7 )
light_mask = 3

[node name="Wall2" type="StaticBody2D" parent="Walls"]
position = Vector2( 971, 952 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall2"]
position = Vector2( -12, -4 )
shape = SubResource( 8 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Walls/Wall2"]
light_mask = 3
occluder = SubResource( 9 )
light_mask = 3

[node name="Wall3" type="StaticBody2D" parent="Walls"]
position = Vector2( 971, 128 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall3"]
position = Vector2( -12, -4 )
shape = SubResource( 10 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Walls/Wall3"]
light_mask = 3
occluder = SubResource( 11 )
light_mask = 3

[node name="Wall4" type="StaticBody2D" parent="Walls"]
position = Vector2( 1563, 352 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall4"]
position = Vector2( 0, -48 )
shape = SubResource( 12 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Walls/Wall4"]
light_mask = 3
occluder = SubResource( 13 )
light_mask = 3

[node name="Wall5" type="StaticBody2D" parent="Walls"]
position = Vector2( 1563, 872 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall5"]
position = Vector2( 0, 8 )
shape = SubResource( 14 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Walls/Wall5"]
light_mask = 3
occluder = SubResource( 15 )
light_mask = 3

[node name="Wall6" type="StaticBody2D" parent="Walls"]
position = Vector2( 1003, 248 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall6"]
position = Vector2( 3.5, 1.5 )
shape = SubResource( 16 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Walls/Wall6"]
light_mask = 3
occluder = SubResource( 17 )
light_mask = 3

[node name="Wall7" type="StaticBody2D" parent="Walls"]
position = Vector2( 1187, 376 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/Wall7"]
position = Vector2( 1, 0.5 )
shape = SubResource( 18 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Walls/Wall7"]
light_mask = 3
occluder = SubResource( 19 )
light_mask = 3

[node name="ClosetDoorCol" type="StaticBody2D" parent="Walls"]
position = Vector2( 1411, 376 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Walls/ClosetDoorCol"]
position = Vector2( 0, 0.5 )
shape = SubResource( 22 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Walls/ClosetDoorCol"]
light_mask = 3
occluder = SubResource( 23 )
light_mask = 3

[node name="Interactuables" type="Node2D" parent="."]
z_index = 1
z_as_relative = false

[node name="ModelYoung" parent="Interactuables" instance=ExtResource( 4 )]
position = Vector2( 561, 210 )
interact_area_shape = SubResource( 5 )
tooltip = "model_tooltip"
dialogue = PoolStringArray( "model_young" )
inspect_textures = [ ExtResource( 6 ), ExtResource( 9 ) ]

[node name="ToolboxClosed" parent="Interactuables" instance=ExtResource( 4 )]
position = Vector2( 960, 280 )
interact_area_shape = SubResource( 5 )
tooltip = "toolbox_tooltip"
dialogue = PoolStringArray( "toolbox_closed" )
progress_key_unlock = "pliers"
hide_on_key = "pliers"

[node name="ToolboxOpened" parent="Interactuables" instance=ExtResource( 4 )]
position = Vector2( 960, 280 )
starts_hidden = true
interact_area_shape = SubResource( 5 )
tooltip = "toolbox_tooltip"
dialogue = PoolStringArray( "toolbox_opened" )
show_on_key = "pliers"

[node name="Strongbox" parent="Interactuables" instance=ExtResource( 4 )]
position = Vector2( 858, 875 )
interact_area_shape = SubResource( 5 )
tooltip = "strongbox_tooltip"
dialogue = PoolStringArray( "strongbox" )
progress_key_unlock = "inspect_strongbox"
key_oneshot = false

[node name="BateWall" parent="Interactuables" instance=ExtResource( 4 )]
position = Vector2( 1187, 398 )
interact_area_shape = SubResource( 25 )
tooltip = "bate_tooltip"
dialogue = PoolStringArray( "bate_wall" )
inspect_textures = [ ExtResource( 11 ) ]
hide_on_key = "screwdriver"

[node name="BateUnused" parent="Interactuables" instance=ExtResource( 4 )]
position = Vector2( 1187, 398 )
starts_hidden = true
interact_area_shape = SubResource( 25 )
tooltip = "bate_tooltip"
dialogue = PoolStringArray( "bate_unused1", "bate_unused2" )
inspect_textures = [ ExtResource( 12 ), ExtResource( 11 ) ]
progress_key_unlock = "bate"
hide_on_key = "bate"
show_on_key = "screwdriver"

[node name="BateUsed" parent="Interactuables" instance=ExtResource( 4 )]
position = Vector2( 1187, 398 )
starts_hidden = true
interact_area_shape = SubResource( 25 )
tooltip = "bate_tooltip"
dialogue = PoolStringArray( "bate_used" )
inspect_textures = [ ExtResource( 12 ), ExtResource( 11 ) ]
show_on_key = "bate"

[node name="ClosetDoorLocked" parent="Interactuables" instance=ExtResource( 4 )]
material = null
position = Vector2( 1385, 398 )
interact_area_shape = SubResource( 25 )
tooltip = "closet_tooltip"
dialogue = PoolStringArray( "closet_locked" )
hide_on_key = "closet_key"

[node name="ClosetDoorUnlocked" parent="Interactuables" instance=ExtResource( 4 )]
material = null
position = Vector2( 1385, 398 )
starts_hidden = true
interact_area_shape = SubResource( 25 )
tooltip = "closet_tooltip"
dialogue = PoolStringArray( "closet_unlocked" )
progress_key_unlock = "unlocked_closet"
hide_on_key = "unlocked_closet"
show_on_key = "closet_key"

[node name="ClosetDoorOpen" parent="Interactuables" instance=ExtResource( 4 )]
material = null
position = Vector2( 1385, 398 )
starts_hidden = true
interact_area_shape = null
tooltip = "closet_tooltip"
dialogue = PoolStringArray( "closet_unlocked" )
show_on_key = "unlocked_closet"

[node name="HangerUnused" parent="Interactuables" instance=ExtResource( 4 )]
material = null
position = Vector2( 1157, 246 )
starts_hidden = true
tooltip = "hanger_tooltip"
dialogue = PoolStringArray( "hanger_unused" )
progress_key_unlock = "hanger"
hide_on_key = "hanger"
show_on_key = "unlocked_closet"

[node name="HangerUsed" parent="Interactuables" instance=ExtResource( 4 )]
material = null
position = Vector2( 1157, 246 )
starts_hidden = true
tooltip = "hanger_tooltip"
dialogue = PoolStringArray( "hanger_used" )
show_on_key = "hanger"

[node name="Lights" type="Node2D" parent="."]
z_index = 2
z_as_relative = false

[node name="BakedLight" parent="Lights" instance=ExtResource( 5 )]
position = Vector2( 681, 319 )
LightColor = Color( 1, 0.937255, 0, 0.466667 )
LightSize = 200.0

[node name="BakedLight2" parent="Lights" instance=ExtResource( 5 )]
position = Vector2( 627, 745 )
LightColor = Color( 1, 0.937255, 0, 0.466667 )

[node name="BakedLight3" parent="Lights" instance=ExtResource( 5 )]
position = Vector2( 1239, 884 )
LightColor = Color( 1, 0.937255, 0, 0.466667 )

[node name="ClosetLight" parent="Lights" instance=ExtResource( 5 )]
position = Vector2( 1237, 303 )
LightColor = Color( 1, 0.937255, 0, 0.466667 )

[node name="ClosetLightSFX" parent="Lights/ClosetLight" instance=ExtResource( 8 )]

[node name="Control" type="Control" parent="Lights"]
margin_left = 355.0
margin_top = 128.0
margin_right = 1539.0
margin_bottom = 952.0
rect_clip_content = true
mouse_filter = 2

[node name="BakedLight5" parent="Lights/Control" instance=ExtResource( 5 )]
position = Vector2( 1768, 512 )
LightColor = Color( 1, 0.988235, 0.835294, 0.466667 )
LightSize = 1080.0

[node name="Over" type="Node2D" parent="."]
z_index = 4
z_as_relative = false

[node name="ClosetHide" parent="Over" instance=ExtResource( 7 )]
visible = false
margin_top = 113.0

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 960, 540 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="NavBase" type="NavigationPolygonInstance" parent="Navigation2D"]
position = Vector2( 75, 0 )
navpoly = SubResource( 4 )

[node name="NavCloset" type="NavigationPolygonInstance" parent="Navigation2D"]
position = Vector2( 75, 0 )
navpoly = SubResource( 24 )
enabled = false
